<resources>
    <string name="app_name">Cines Aragón</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <string name="intro">¡Bienvenido a Cines Aragón!\n Aquí podrás comprar tus entradas en cualquier cine de Aragón.</string>
    <string name="intro2">¡Compra una entrada!</string>
    <string name="showtime1">17.30</string>
    <string name="showtime2">19.30</string>
    <string name="showtime3">21.30</string>

    <string name="chooseTime">Por favor, escoja una hora: </string>
    <string name="chooseType">Y elija las entradas: </string>


    <string name="fill_data">Rellene sus datos para finalizar</string>
    <string name="summary_pay">Resumen de la compra</string>

    <string name="pay_button_text">Pagar</string>

    <string name="adult">Adulto</string>
    <string name="children">Niño</string>
    <string name="young">Carnét Joven</string>

    <string name="action_movie_filter">Acción</string>
    <string name="drama_movie_filter">Drama</string>
    <string name="comedy_movie_filter">Comedia</string>
    <string name="romance_movie_filter">Romance</string>
    <string name="horror_movie_filter">Terror</string>
    <string name="thriller_movie_filter">Thriller</string>


    <string name="user_perfil">Datos del usuario</string>
    <string name="user_perfil_button">Guardar</string>



    <string-array name="ticketQuantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


</resources>
