<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeleccionTicketActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/adult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="onCheckboxSeleccionado"
                android:text="@string/adult" />

            <Spinner
                android:id="@+id/quantityAdult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:layout_marginLeft="@android:dimen/app_icon_size" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/children"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/children"
                android:onClick="onCheckboxSeleccionado" />

            <Spinner
                android:id="@+id/quantityChildren"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:layout_marginLeft="@android:dimen/app_icon_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/carnetJoven"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="onCheckboxSeleccionado"
                android:textSize="20sp"
                android:text="@string/young" />

            <Spinner
                android:id="@+id/quantityJoven"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:layout_marginLeft="@android:dimen/app_icon_size" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/continue2Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:text="Continue"/>


</LinearLayout>